--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pv_319_react_1",
+  "name": "react_1",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://albert3424.github.io/react_1/",
